# windows-amsi-com-server-rust

./: Cargo.toml  README.md
samples/: test.js  test.vbs
src/: lib.rs  provider.rs
