[package]
name = "windows-amsi-provider-rust"
version = "0.1.0"
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]

widestring = { version = "1.1.0" }
libc = { version = "0.2.154" }
# windows-core = { version = "0.56.0" }
windows-core = { path = "/home/wsxqaz/clones/windows-rs/crates/libs/core" }

# windows = { version = "0.53.0", features = [
windows = { path = "/home/wsxqaz/clones/windows-rs/crates/libs/windows", features = [
  "implement",
  "Win32_Foundation",
  "Win32_Security",
  "Win32_System_Com",
  "Win32_System_SystemServices",
  "Win32_System_LibraryLoader",
  "Win32_System_Antimalware",
  "Win32_System_Registry",
] }
com = { version = "0.6.0", features = ["production"] }
