[package]
name = "windows-amsi-provider-rust"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]

widestring = { version = "1.1.0" }
log = { version = "0.4" }
env_logger = { version = "0.11.3" }
libc = { version = "0.2.154" }
windows-core = { version = "0.56.0" }
windows = { version = "0.56.0", features = [
  "implement",
  "Win32_Foundation",
  "Win32_Security",
  "Win32_System_Com",
  "Win32_System_SystemServices",
  "Win32_System_LibraryLoader",
  "Win32_System_Antimalware",
  "Win32_System_Registry",
] }
